--- a/NgMemo/Base.lproj/LaunchScreen.storyboard
+++ b/NgMemo/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="wpR-EI-vuL">
-                                <rect key="frame" x="68.666666666666686" y="265" width="256" height="322"/>
+                                <rect key="frame" x="68.666666666666686" y="264.66666666666669" width="256" height="323.00000000000006"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="8bJ-3N-WoK">
                                         <rect key="frame" x="0.0" y="0.0" width="256" height="256"/>
@@ -27,17 +27,19 @@
                                             <constraint firstAttribute="width" constant="256" id="iFU-wz-4EI"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NgMemo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbx-2S-poe">
-                                        <rect key="frame" x="67.666666666666686" y="286" width="120.33333333333331" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NgMemo" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbx-2S-poe">
+                                        <rect key="frame" x="66.333333333333329" y="285.99999999999994" width="122.99999999999999" height="37"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="30"/>
+                                        <color key="textColor" red="0.53024323453608246" green="0.44797407098161146" blue="0.33030834501857492" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="highlightedColor" systemColor="labelColor"/>
+                                        <color key="shadowColor" red="0.98431372640000003" green="0.93725490570000003" blue="0.70980393890000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <size key="shadowOffset" width="2" height="-1"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96470588450000005" green="0.96862745289999996" blue="0.92156863209999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="wpR-EI-vuL" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="I3J-Ye-iAq"/>
                             <constraint firstItem="wpR-EI-vuL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="g1H-Y7-9Ia"/>
@@ -51,8 +53,8 @@
     </scenes>
     <resources>
         <image name="splash" width="256" height="256"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
